--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -77,6 +77,10 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 html,
